;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-2.3.5:
  * bug fix: riscv can build contribs again.

changes in sbcl-2.3.5 relative to sbcl-2.3.4:
  * enhancement: Unicode support has been updated to support version 15.0.0 of
    the Unicode standard, including addition of characters and their collation
    keys, and refinements to grapheme-, word- and line-breaking algorithms.
  * new contrib module: an interface to perf, a performance-analysing tool for
    Linux.  (thanks to Luke Gorrie and Philipp Marek)
  * platform support:
    ** on x86-64, prefer using the LEAVE instruction rather than MOV/POP at
       function epilogue to restore RSP/RBP.
    ** support SB-FUTEX on OpenBSD.  (thanks to Elijah Stone)
    ** support SB-FUTEX on Darwin/arm64.  (thanks to Elijah Stone)
    ** fix compilation with clang on Windows.  (lp#2018601, thanks to Andrew)
  * bug fix: inspecting objects with unbound slots produces output that is less
    confusable with the string "unbound".  (thanks to Nicolas Martyanoff)
  * optimization: make TN-REFs doubly-linked, allowing faster deletion.
    (lp#2018124, reported by Matt Kaufmann)
  * optimization: MAPCAN/MAPCON are less accidentally quadratic.  (thanks to
    Gleefre)
  * optimization: improved arithmetic operations in the form of 
    (the word-sized-type (-+* word-sized word-sized)) when the result can
    overflow. For arm64 and x86-64.
    
changes in sbcl-2.3.4 relative to sbcl-2.3.3:
  * enhancement: attempts to call non-callable objects can now provide
    USE-VALUE restarts on x86-64 and arm64.
  * bug fix: ioctl() (both in SBCL's internals and through SB-POSIX) was
    broken on ARM64/Darwin.  (reported by fiddlerwoaroof)
  * platform support:
    ** support for cross-compiling the system to Android has been added;
       (thanks to Gleefre)
    ** include likely absolute paths for gmp and mpfr on ARM64/Darwin; (thanks
       to Elias Lawson-Fox)