@@ -2218,6 +2218,73 @@
             (inst b :cc error)
             done)))))
 
+(define-vop (overflow-negate-signed)
+  (:translate overflow-negate)
+  (:args (x :scs (signed-reg)))
+  (:arg-types signed-num)
+  (:info type)
+  (:results (r :scs (signed-reg)))
+  (:result-types signed-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:generator 2
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (error (generate-error-code vop 'sb-kernel::add-sub-overflow-error r)))
+      (inst negs r x)
+      (inst b :vs error))))
+
+(define-vop (overflow-negate-unsigned)
+  (:translate overflow-negate)
+  (:args (x :scs (unsigned-reg)))
+  (:arg-types unsigned-num)
+  (:info type)
+  (:results (r :scs (unsigned-reg)))
+  (:result-types unsigned-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:generator 2
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (error (generate-error-code vop 'sb-kernel::negate-overflow-error r)))
+      (move r x)
+      (inst cbnz x error))))
+
+(define-vop (overflow-negate-unsigned=>signed)
+  (:translate overflow-negate)
+  (:args (x :scs (unsigned-reg)))
+  (:arg-types unsigned-num)
+  (:info type)
+  (:results (r :scs (signed-reg)))
+  (:result-types signed-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:generator 2
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (error (generate-error-code vop 'sb-kernel::negate-overflow-error x)))
+      (inst mov tmp-tn 9223372036854775808)
+      (inst cmp x tmp-tn)
+      (inst b :hi error)
+      (inst neg r x))))
+
+(define-vop (overflow-negate-signed=>unsigned)
+  (:translate overflow-negate)
+  (:args (x :scs (signed-reg)))
+  (:arg-types signed-num)
+  (:info type)
+  (:results (r :scs (unsigned-reg)))
+  (:result-types unsigned-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:generator 2
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (error (generate-error-code vop 'sb-kernel::negate-overflow-error x)))
+      (inst cmp x 1)
+      (inst b :ge error)
+      (inst neg r x))))
+
 (define-vop (overflow-ash-signed)
   (:translate overflow-ash)
   (:args (number :scs (signed-reg))
@@ -2351,7 +2418,8 @@
                           (t
                            (inst cmp zr-tn (lsr number (- 64 amount)))
                            (inst b :ne error))))))
-            ((sc-is amount unsigned-reg)
+            ((csubtypep (tn-ref-type amount-ref)
+                              (specifier-type 'unsigned-byte))
              (unless fits
                (move r number)
                (inst cbz number done)
@@ -2365,10 +2433,9 @@
             (t
              (inst neg tmp-tn amount)
              (cond (fits
-                    (inst asr r number tmp-tn))
+                    (inst lsr r number tmp-tn))
                    (t
                     (inst cmp tmp-tn n-word-bits)
-                    (inst csinv r tmp-tn zr-tn :lo)
                     (inst csel r number zr-tn :lo)
                     (inst lsr r r tmp-tn)))
              (inst cmp amount 0)
@@ -2381,73 +2448,6 @@
              (inst asr tmp-tn number tmp-tn)
              (inst cbnz tmp-tn error))))
     done))
-
-(define-vop (overflow-negate-signed)
-  (:translate overflow-negate)
-  (:args (x :scs (signed-reg)))
-  (:arg-types signed-num)
-  (:info type)
-  (:results (r :scs (signed-reg)))
-  (:result-types signed-num)
-  (:policy :fast-safe)
-  (:vop-var vop)
-  (:generator 2
-    (let* ((*location-context* (unless (eq type 'fixnum)
-                                 type))
-           (error (generate-error-code vop 'sb-kernel::add-sub-overflow-error r)))
-      (inst negs r x)
-      (inst b :vs error))))
-
-(define-vop (overflow-negate-unsigned)
-  (:translate overflow-negate)
-  (:args (x :scs (unsigned-reg)))
-  (:arg-types unsigned-num)
-  (:info type)
-  (:results (r :scs (unsigned-reg)))
-  (:result-types unsigned-num)
-  (:policy :fast-safe)
-  (:vop-var vop)
-  (:generator 2
-    (let* ((*location-context* (unless (eq type 'fixnum)
-                                 type))
-           (error (generate-error-code vop 'sb-kernel::negate-overflow-error r)))
-      (move r x)
-      (inst cbnz x error))))
-
-(define-vop (overflow-negate-unsigned=>signed)
-  (:translate overflow-negate)
-  (:args (x :scs (unsigned-reg)))
-  (:arg-types unsigned-num)
-  (:info type)
-  (:results (r :scs (signed-reg)))
-  (:result-types signed-num)
-  (:policy :fast-safe)
-  (:vop-var vop)
-  (:generator 2
-    (let* ((*location-context* (unless (eq type 'fixnum)
-                                 type))
-           (error (generate-error-code vop 'sb-kernel::negate-overflow-error x)))
-      (inst mov tmp-tn 9223372036854775808)
-      (inst cmp x tmp-tn)
-      (inst b :hi error)
-      (inst neg r x))))
-
-(define-vop (overflow-negate-signed=>unsigned)
-  (:translate overflow-negate)
-  (:args (x :scs (signed-reg)))
-  (:arg-types signed-num)
-  (:info type)
-  (:results (r :scs (unsigned-reg)))
-  (:result-types unsigned-num)
-  (:policy :fast-safe)
-  (:vop-var vop)
-  (:generator 2
-    (let* ((*location-context* (unless (eq type 'fixnum)
-                                 type))
-           (error (generate-error-code vop 'sb-kernel::negate-overflow-error x)))
-      (inst cmp x 1)
-      (inst b :ge error)
-      (inst neg r x))))
 
 (define-vop (overflow-ash-signed=>unsigned overflow-ash-unsigned)
   (:translate overflow-ash)
