@@ -1188,6 +1188,196 @@
       (inst jmp :o error)
       (inst add r tmp))))
 
+(define-vop (overflow-ash-unsigned)
+  (:translate overflow-ash)
+  (:args (number :scs (unsigned-reg))
+         (amount :scs (unsigned-reg signed-reg immediate)))
+  (:arg-types unsigned-num untagged-num)
+  (:arg-refs nil amount-ref)
+  (:info type)
+  (:temporary (:sc signed-reg :offset rcx-offset) ecx)
+  (:temporary (:sc unsigned-reg) temp)
+  (:results (result :scs (unsigned-reg) :from :load))
+  (:result-types unsigned-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:variant-vars signed)
+  (:generator 3
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (amount-error amount)
+           (error (generate-error-code+
+                   (when (sc-is amount immediate)
+                     (setf amount (tn-value amount)
+                           amount-error
+                           (make-random-tn :kind :normal
+                                           :sc (sc-or-lose (if (typep amount 'word)
+                                                               'unsigned-reg
+                                                               'signed-reg))
+                                           :offset (tn-offset temp)))
+                     (lambda ()
+                       (inst mov temp amount)))
+                   vop 'sb-kernel::ash-overflow2-error number amount-error))
+           (fits (csubtypep (tn-ref-type amount-ref)
+                            (specifier-type `(integer -63 63)))))
+      (when signed
+        (inst test number number)
+        (inst jmp :s error))
+      (cond ((numberp amount)
+             (cond ((< amount -63)
+                    (zeroize result))
+                   ((minusp amount)
+                    (move result number)
+                    (inst shr result amount))
+                   ((> amount 63)
+                    (inst test number number)
+                    (inst jmp :nz error)
+                    (move result number))
+                   ((zerop amount)
+                    (move result number))
+                   (t
+                    (move result number)
+                    (inst shl result amount)
+                    (cond ((= amount 1)
+                           (inst jmp :c error))
+                          (t
+                           (move temp number)
+                           (inst shr temp (- 64 amount))
+                           (inst jmp :nz error))))))
+            (t
+             (assemble ()
+               (move result number)
+               (move ecx amount)
+               (unless (csubtypep (tn-ref-type amount-ref)
+                                  (specifier-type 'unsigned-byte))
+                 (assemble ()
+                   (inst test ecx ecx)
+                   (inst jmp :ns POSITIVE)
+                   (inst neg ecx)
+                   (unless fits
+                     (inst cmp ecx 63)
+                     (inst jmp :be OKAY)
+                     (zeroize result))
+                   OKAY
+                   (inst shr result :cl)
+                   (inst jmp DONE)))
+               POSITIVE
+               (unless fits
+                 (inst test number number)
+                 (inst jmp :z done)
+                 (inst cmp ecx n-word-bits)
+                 (inst jmp :ge error))
+               (inst shl result :cl)
+               (inst neg :byte ecx)
+               (move temp number)
+               (inst shr temp :cl)
+               (inst jmp :nz error)))))
+    done))
+
+(define-vop (overflow-ash-signed=>unsigned overflow-ash-unsigned)
+  (:translate overflow-ash)
+  (:args (number :scs (signed-reg))
+         (amount :scs (unsigned-reg signed-reg immediate)))
+  (:arg-types signed-num untagged-num)
+  (:variant t)
+  (:variant-cost 4))
+
+(define-vop (overflow-ash-signed)
+  (:translate overflow-ash)
+  (:args (number :scs (signed-reg))
+         (amount :scs (unsigned-reg signed-reg immediate)))
+  (:arg-types signed-num untagged-num)
+  (:arg-refs nil amount-ref)
+  (:info type)
+  (:temporary (:sc signed-reg :offset rcx-offset) ecx)
+  (:temporary (:sc unsigned-reg) temp)
+  (:results (result :scs (signed-reg) :from :load))
+  (:result-types signed-num)
+  (:policy :fast-safe)
+  (:vop-var vop)
+  (:generator 3
+    (let* ((*location-context* (unless (eq type 'fixnum)
+                                 type))
+           (amount-error amount)
+           (error (generate-error-code+
+                   (when (sc-is amount immediate)
+                     (setf amount (tn-value amount)
+                           amount-error
+                           (make-random-tn :kind :normal
+                                           :sc (sc-or-lose (if (typep amount 'word)
+                                                               'unsigned-reg
+                                                               'signed-reg))
+                                           :offset (tn-offset temp)))
+                     (lambda ()
+                       (inst mov temp amount)))
+                   vop 'sb-kernel::ash-overflow2-error number amount-error))
+           (fits (csubtypep (tn-ref-type amount-ref)
+                            (specifier-type `(integer -63 63)))))
+      (cond ((numberp amount)
+             (cond ((minusp amount)
+                    (move result number)
+                    (inst sar result (min (- amount) 63)))
+                   ((> amount 63)
+                    (inst test number number)
+                    (inst jmp :nz error)
+                    (move result number))
+                   ((zerop amount)
+                    (move result number))
+                   (t
+                    (move result number)
+                    (inst shl result amount)
+                    (cond ((= amount 1)
+                           (inst jmp :o error))
+                          (t
+                           (move temp number)
+                           (inst sar temp (- 64 amount))
+                           (move ecx result)
+                           (inst sar ecx 63)
+                           (inst cmp temp ecx)
+                           (inst jmp :ne error))))))
+            (t
+             (assemble ()
+               (move result number)
+               (move ecx amount)
+               (inst test ecx ecx)
+               (unless (csubtypep (tn-ref-type amount-ref)
+                                  (specifier-type 'unsigned-byte))
+                 (assemble ()
+                   (inst jmp :ns POSITIVE)
+                   (inst neg ecx)
+                   (unless fits
+                     (inst cmp ecx 63)
+                     (inst jmp :be OKAY)
+                     (inst or ecx 63))
+                   OKAY
+                   (inst sar result :cl)
+                   (inst jmp DONE)))
+               POSITIVE
+               (inst jmp :z done)
+               (unless fits
+                 (inst test number number)
+                 (inst jmp :z done)
+                 (inst cmp ecx n-word-bits)
+                 (inst jmp :ge error))
+               (inst shl result :cl)
+               (inst neg :byte ecx)
+               (move temp number)
+               (inst sar temp :cl)
+               (move ecx result)
+               (inst sar ecx 63)
+               (inst cmp temp ecx)
+               (inst jmp :ne error)))))
+    done))
+
+(define-vop (overflow-ash-fixnum overflow-ash-signed)
+  (:translate overflow-ash)
+  (:args (number :scs (any-reg))
+         (amount :scs (unsigned-reg immediate)))
+  (:arg-types tagged-num unsigned-num)
+  (:results (result :scs (any-reg) :from :load))
+  (:result-types tagged-num)
+  (:variant-cost 2))
+
 (define-vop (overflow+t)
   (:translate overflow+)
   (:args (x :scs (any-reg descriptor-reg))
